[gd_scene load_steps=7 format=3 uid="uid://c5b0hwau1hhqw"]

[ext_resource type="Script" path="res://TitleScreen.gd" id="1_u8j3i"]
[ext_resource type="Texture2D" uid="uid://bapyim7yk58d7" path="res://Images/unnamed.png" id="2_6w23j"]
[ext_resource type="FontFile" uid="uid://c7w6d8w70l6rk" path="res://Images/Pixelify_Sans/static/PixelifySans-Bold.ttf" id="9_mndh6"]

[sub_resource type="Animation" id="Animation_abit3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_i0n5u"]
resource_name = "fade_in"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(687, -676)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ulrh"]
_data = {
"RESET": SubResource("Animation_abit3"),
"fade_in": SubResource("Animation_i0n5u")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u8j3i")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 647.0
texture = ExtResource("2_6w23j")
expand_mode = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 772.0
offset_bottom = 143.0
theme_override_colors/font_color = Color(0.984314, 0.584314, 0.909804, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_mndh6")
theme_override_font_sizes/font_size = 65
text = "Beachball and Cassidy"

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 280.0
offset_right = 576.0
offset_bottom = 392.0
theme_override_colors/font_color = Color(0.737255, 0.494118, 0.835294, 1)
theme_override_fonts/font = ExtResource("9_mndh6")
theme_override_font_sizes/font_size = 60
text = "Start!"

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 472.0
offset_right = 576.0
offset_bottom = 584.0
theme_override_colors/font_color = Color(0.737255, 0.494118, 0.835294, 1)
theme_override_fonts/font = ExtResource("9_mndh6")
theme_override_font_sizes/font_size = 60
text = "Quit!"

[node name="FadeOut" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1169.0
offset_bottom = 667.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeOut"]
libraries = {
"": SubResource("AnimationLibrary_4ulrh")
}

[connection signal="button_up" from="Start" to="." method="_on_start_button_up"]
[connection signal="button_up" from="Quit" to="." method="_on_quit_button_up"]
